[gd_scene load_steps=5 format=3 uid="uid://b1rro3h5dxilx"]

[ext_resource type="Script" uid="uid://dc6e84kn4fdhr" path="res://scenes/ui/battle_over_panel.gd" id="1_5h67t"]
[ext_resource type="FontFile" uid="uid://cbyf4c40xnj2l" path="res://assets/fonts/linux-libertine/LinLibertine_5.3.0_2012_07_02/LinLibertineOTF_5.3.0_2012_07_02/LinLibertine_RZI.otf" id="2_qotfm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8c1mx"]
bg_color = Color(0, 0, 0, 0.286275)

[sub_resource type="LabelSettings" id="LabelSettings_435c4"]
font = ExtResource("2_qotfm")
font_size = 52

[node name="BattleOverPanel" type="Panel"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_8c1mx")
script = ExtResource("1_5h67t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Path Cleared"
label_settings = SubResource("LabelSettings_435c4")

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
text = "Proceed..."

[node name="RestartButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 35)
layout_mode = 2
size_flags_horizontal = 4
text = "Restart"
